--- a/Index.html
+++ b/Index.html
@@ -38,13 +38,12 @@
 
 <script>
   let menuTersedia = [
-    { nama: 'Nasi Telor', harga: 6000 },
-    { nama: 'Mie Nyemek', harga: 6000 },
-    { nama: 'Cireng', harga: 3000 },
-    { nama: 'Samosa', harga: 1500 },
-    { nama: 'Mendoan', harga: 2000 },
+    { nama: 'Bakso', harga: 6000 },
+    { nama: 'Cipak Koceak', harga: 3000 },
+    { nama: 'Keju Aroma', harga: 4000 },
+    { nama: 'Gorengan', harga: 2000 },
+    { nama: 'Es Teh', harga: 3000 },
     { nama: 'Es Sujel', harga: 4000 },
-    { nama: 'Es Teh', harga: 3000 }
   ];
 
   let pesanan = [];
